<resources>
    <string name="app_name">Rick And Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_image">Character Image</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="created">Created</string>
    <string name="clear_database">Clear database</string>
    <string name="channel_id">1</string>
    <string name="channel_name">worker</string>
</resources>