<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.details.RickAndMortyCharactersDetailsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="16dp"
        app:cardCornerRadius="@dimen/margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:id="@+id/characterImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="@dimen/margin_top"
                android:contentDescription="@string/character_image" />
            <TextView
                android:text="@string/name"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                />
            <TextView
                android:id="@+id/characterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="@dimen/margin_top"
                />
            <TextView
                android:text="@string/status"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/characterStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="@dimen/margin_top"
                />
            <TextView
                android:text="@string/species"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/characterSpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="@dimen/margin_top"
                />
            <TextView
                android:text="@string/gender"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/characterGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="@dimen/margin_top"
                />
            <TextView
                android:text="@string/created"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_margin="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/createdAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="@dimen/margin_top"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>